# orn

./: .gitignore  Cargo.toml  README.md  README.tpl
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
examples/: cheat.rs
issues/: 01-exactsizeiterator-size-hint-contract-violation.md  02-map-with-non-idiomatic-tuple-argument.md  03-missing-from-implementations-for-variants.md  04-missing-tryfrom-for-each-variant.md  05-as-ref-inherent-method-shadows-asref-trait.md  06-missing-default-implementation.md  07-missing-display-implementation.md  08-missing-iterator-fold-nth-optimizations.md  09-serde-format-undocumented.md  10-missing-error-trait-integration.md  11-missing-unwrap-expect-convenience-methods.md  12-rayon-one-undocumented-public-type.md  13-or1-missing-natural-from-into-conversions.md  14-inherent-into-not-proper-into-trait-impl.md  15-or0-missing-standard-trait-derives.md  16-missing-must-use-on-pure-methods.md  17-at-trait-inconsistent-return-types.md  18-missing-widen-narrow-conversions.md  19-derived-ord-surprising-and-undocumented.md  20-missing-write-trait-implementations.md  21-suggestion-ops-trait-integrations.md  22-suggestion-partition-or-iterator-combinator.md  23-suggestion-proc-macro-companion-crate.md
src/: lib.rs
tests/: future.rs  iter.rs  or.rs  rayon.rs
