[package]
name = "orn"
version = "0.8.2"
edition = "2021"
authors = ["Magicolo <magicololand@gmail.com>"]
documentation = "https://docs.rs/orn/latest/orn/"
description = "A generic implementation of a sum type (or discriminated union). It provides `enum Or&ltT1, T2, ..., N&gt` types as a counterpart to tuples."
repository = "https://github.com/Magicolo/orn"
keywords = ["sum-type", "either", "ADT", "data-structures", "no-std"]
categories = ["data-structures", "no-std"]
license = "MIT"

[badges]
github = { repository = "Magicolo/orn", workflow = "test" }

[features]
default = ["iter", "future"]
or16 = []
or32 = ["or16"]
iter = []
future = ["dep:pin-project"]
serde = ["dep:serde"]
rayon = ["dep:rayon"]

[dependencies]
pin-project = { version = "1.1.10", optional = true, default-features = false }
serde = { version = "1.0.219", optional = true, default-features = false, features = [
    "derive",
] }
rayon = { version = "1.11.0", optional = true, default-features = false }
