[package]
name = "orn"
version = "0.9.0"
edition = "2021"
authors = ["Magicolo <magicololand@gmail.com>"]
documentation = "https://docs.rs/orn/latest/orn/"
description = "A generic implementation of a sum type (or discriminated union). It provides `enum Or<T1, T2, ..., N>` types as a counterpart to tuples."
repository = "https://github.com/Magicolo/orn"
keywords = ["sum-type", "either", "ADT", "data-structures", "no-std"]
categories = ["data-structures", "no-std"]
license = "MIT"

[badges]
github = { repository = "Magicolo/orn", workflow = "test" }

[features]
default = ["iter", "future"]
or16 = []
or32 = ["or16"]
iter = []
future = ["dep:pin-project-lite"]
serde = ["dep:serde"]
rayon = ["dep:rayon"]

[dependencies]
pin-project-lite = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true, default-features = false }
rayon = { version = "1.11", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1"
